// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly 1`] = `
<DocumentFragment>
  <div
    class="u-text o-container o-container--xlarge"
    data-name="container"
  >
    lorem ipsum dolor
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly a large container 1`] = `
<DocumentFragment>
  <div
    class="u-text o-container o-container--large"
    data-name="container"
  >
    lorem ipsum dolor sit amet
  </div>
</DocumentFragment>
`;
